# QGIS

./: CMakeLists.txt
ci/travis/osx/: before_install.sh
cmake/: MacBundleMacros.cmake
mac/cmake/: 1qt.cmake.in
python/core/: qgsmaprenderer.sip
src/analysis/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  qgisapp.cpp  qgsbrowserdockwidget.cpp
src/auth/: CMakeLists.txt
src/auth/oauth/: CMakeLists.txt  qgsauthoauthedit.cpp  qgsauthoauthedit.h  qgsauthoauthedit.ui  qgsauthoauthmethod.cpp  qgsauthoauthmethod.h
src/auth/oauth/o2/: CMakeLists.txt
src/auth/oauth/o2/src/: CMakeLists.txt  o1.cpp  o2replyserver.cpp  src.pri
src/core/: CMakeLists.txt  qgsdataitem.cpp  qgsgml.cpp  qgsmaprenderer.cpp  qgsmaprenderer.h
src/core/native/mac/: cocoainitializer.mm  qgsmacappkit.h  qgsmacnative.h
src/customwidgets/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/native/mac/: cocoainitializer.h  qgsmacappkit.h  qgsmacappkit.mm  qgsmacnative.cpp  qgsmacnative.h
src/plugins/: CMakeLists.txt
src/plugins/oauth_test/: CMakeLists.txt  qgs_oauth_plugin.cpp  qgs_oauth_plugin.h  qgs_oauth_widget.cpp  qgs_oauth_widget.h  qgs_oauth_widget.ui
src/providers/ogr/: qgsogrprovider.cpp
src/providers/wfs/: qgswfsdatasourceuri.h
src/python/: CMakeLists.txt
src/server/: CMakeLists.txt
tests/src/app/: CMakeLists.txt
tests/src/python/: test_qgspallabeling_base.py
